documentation added for routes and successfully generated docs
